Edit:Fix readability in case study and about section

--- a/src/client/styles/flyux.scss
+++ b/src/client/styles/flyux.scss
@@ -53,7 +53,7 @@ h3{
 
 
  p, li{
-    color:grey;
+    color:black;
 }
 
 
@@ -74,7 +74,7 @@ article{
     opacity:0;
     transition: 2s;
     transition-timing-function:ease-out;
-    color:grey;
+    color:black;
     font-family:'Poppins';
     
     
@@ -89,7 +89,7 @@ article{
 }
 
 .quote{
-    background-color:$flyuxlowlowop;
+   // background-color:$flyuxlowlowop;
     padding-top:2vh;
     padding-bottom:2vh;
 }
@@ -101,7 +101,7 @@ article{
 }
 
 .grey{
-    background-color: grayscale($color: #eeebeb);
+    //background-color: grayscale($color: #eeebeb);
     padding-top:15px;
 }
 
